--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -262,7 +262,7 @@
 .footer {
   position: absolute;
   bottom: 0;
-  margin-bottom: 0;
+  height: 50px;
   text-align: center;
   a {
     color: black !important;
